# ur5_robot_gripper

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
action/: ExecuteGrasp.action  MoveGripperAction.action  MoveToJointPosition.action  MoveToPoseAction.action  MoveToPositionAction.action
config/: view.rviz
docker/: Dockerfile  entrypoint.sh  run_container.bash
include/ur5_robot_gripper/: gripper_control.hpp  robot_control.hpp
launch/: real_robot.launch  robot_control.launch.py  simulate.launch  ur5_bringup.launch  ur_common.launch  view.launch
meshes/: tube100 .usdc  tube75.usd  tube75.usdc  tube_rack_assem.usd
meshes/frame/visual/: frame.dae
meshes/rack/: rack.usd
meshes/tray/: tray.usd
meshes/tube100/: tube100.usd
meshes/tube75/: tube75.usd
meshes/tube75/collision/: tube75.stl  tube75.usd
meshes/tube75/visual/: tube75.dae
scripts/: Load_isaac_world.py  collision_test.py  draw_arrow.py  fake_sim_time.py  get_pose.py  grasp_tube.py  grasp_tube_old.py  pos_transform.py  pose_transform_server.py  pub_tf.py  publish_from_isaac_to_ros.py  robot_control_client.py  stand_along_test.py  test.py  test_move_distance.py  test_placing_rotation.py  tube_pose_sub.py  utils.py
scripts/read_pose_extension/config/: extension.toml
scripts/read_pose_extension/docs/: CHANGELOG.md
scripts/read_pose_extension/read_object_pose_python/: global_variables.py  scenario.py  ui_builder.py
scripts/world_scene_stage/: 1..py  1.stand_along.py  2.py  3.py
src/: grasp_tube.cpp  gripper_control.cpp  gripper_control_node.cpp  robot_control.cpp  robot_control.py  robot_control_node.cpp  robot_control_test.cpp  robot_function_test.cpp  ur_robot_move_server.cpp
srv/: MoveToPose.srv  MoveToPosition.srv  PoseTransform.srv  PrintPose.srv
ur5_robot_gripper/robot/: robot_control.py
ur5_robot_gripper/robotiq/: sim_control.py
urdf/: tube75.usd  ur5_robotiq_camera.xacro  ur5_robotiq_description.xacro
urdf/robotiq_gripper/: robotiq.xacro  robotiq_85_gripper.transmission.xacro  robotiq_85_gripper.urdf.xacro
urdf/tube/: tube75.urdf
urdf/ur5/: ur5.xacro
urdf/ur5/config/ur5/: visual_parameters.yaml
urdf/ur5/inc/: ur5_macro.xacro  ur_macro.xacro
urdf/ur_description/: ur5 scanner.urdf  ur5.urdf
urdf/ur_description/meshes/frame/collision/: frame.stl
